# HemePure_tools

./: .gitignore  CMakeLists.txt  README.md  hemeGridRefiner.py  hemeLBpreprocSingle.py  hemepureDualPipeline.py  hemepureNMeshPipeline2_ARCHER.py  hemepureNMeshpipeline.py  hemepureNMeshpipeline2.py  hemepureNMeshpipeline3.py  hemepureNMeshpipeline4.py  hemepureNMeshpipeline4_ARCHER.py  hemepurepipeline.py  notes  test2.txt
autoSphereCutter/: clipVessel.py
gmy2gmy+/: Makefile  gmy2gmy+.cc  note
gmy2inlets/: Makefile  Makefile.frontier  extract_specific_inlet.py  gmy2inlets.cc  gmy2lets.cc
inflow-profile-builder/: calculate_distances.py  create_mesh_links.py  detect_borders.py  distance_to_velocity_weights.py  fit_plane.py  inflow.py  inflow_named.py  inflow_named2.py  inflow_named3.py  inflow_named_multiprofile.py  plot_plane.py  transform_points.py
postProcessTools/: postProcessCombined_plotting.py  postProcessConservationPlots.py  postProcessConservationPlots_coupled.py  postProcessDataSave.py  postProcessDataSave_coupled.py  postProcessPlotSingleFunction.py  toParaview.sh  weightsReader.py
voxelizer/source/: Makefile  Makefile.MAP  Makefile.frontier  README.Frontier  env_frontier.sh  voxelizer.cpp  voxelizer.cpp.nanoflann  voxelizer.cpp.vanilla  voxelizer2.cpp  voxelizer2_ARCHER.cpp  voxelizer3.cpp  voxelizer3_file.cpp  voxelizer3_file_ARCHER.cpp  voxelizer_MultiInput.cpp
vx2ascii/: Makefile  vx2ascii.cc
vx2gmy/: Makefile  Makefile.frontier  make_gmy_MPI.sh  mpivx2gmy.cc  mpivx2gmy.orig.cc  note
vx2paraview/: Makefile  vx2paraview.cc
vx2refine/: Makefile  vx2refine.cc  vx2refine_LRZ.cc
vx2refine/parallel/: Makefile  mpivx2refine  mpivx2refine.cc  refine_MPI.sh
